--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -2,3 +2,7 @@
 @import './base/reset';
 @import './utils/visually_hidden';
 @import './components/page-footer';
+
+@import './components/scanning/hero';
+@import './components/scanning/scan-process';
+@import './components/scanning/button';
