add scan process partial

--- a/src/partials/scanning/scan-process.html
+++ b/src/partials/scanning/scan-process.html
@@ -7,12 +7,33 @@
           <svg class="scan-list-icon">
             <use href=""></use>
           </svg>
+          <p class="descr">Підготовка деталі до сканування</p>
+        </div>
+      </li>
+      <li class="scan-list-item">
+        <div class="scan-list-canvas">
+          <svg class="scan-list-icon">
+            <use href=""></use>
+          </svg>
           <p>Підготовка деталі до сканування</p>
         </div>
       </li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li class="scan-list-item">
+        <div class="scan-list-canvas">
+          <svg class="scan-list-icon">
+            <use href=""></use>
+          </svg>
+          <p>Підготовка деталі до сканування</p>
+        </div>
+      </li>
+      <li class="scan-list-item">
+        <div class="scan-list-canvas">
+          <svg class="scan-list-icon">
+            <use href=""></use>
+          </svg>
+          <p>Підготовка деталі до сканування</p>
+        </div>
+      </li>
     </ul>
   </div>
 </section>
