--- a/src/sass/components/scanning/_scan-process.scss
+++ b/src/sass/components/scanning/_scan-process.scss
@@ -22,7 +22,14 @@
   text-transform: uppercase;
 }
 
+.scan-list {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
 .scan-list-canvas {
+  position: relative;
   width: 130px;
   height: 182px;
   background: #ffffff;
@@ -30,4 +37,11 @@
   box-shadow: inset 1px 1px 16px rgba(203, 203, 203, 0.8),
     inset -1px -1px 16px #ffffff;
   border-radius: 50px 0px;
+}
+
+.descr {
+  position: absolute;
+  top: 114px;
+  left: 0;
+  text-align: center;
 }
