--- a/src/partials/scanning/scan-process.html
+++ b/src/partials/scanning/scan-process.html
@@ -1,37 +1,37 @@
 <section class="section">
   <div class="container">
-    <h2 class="title">ПРОЦЕС 3D СКАНУВАННЯ</h2>
+    <h2 class="section__title">ПРОЦЕС 3D СКАНУВАННЯ</h2>
     <ul class="scan-list">
-      <li class="scan-list-item">
-        <div class="scan-list-canvas">
-          <svg class="scan-list-icon">
+      <li class="scan-list__item">
+        <div class="scan-list__canvas">
+          <svg class="scan-list__icon">
             <use href=""></use>
           </svg>
-          <p class="descr">Підготовка деталі до сканування</p>
+          <p class="scan-list__descr">Підготовка деталі до сканування</p>
         </div>
       </li>
-      <li class="scan-list-item">
-        <div class="scan-list-canvas">
-          <svg class="scan-list-icon">
+      <li class="scan-list__item">
+        <div class="scan-list__canvas">
+          <svg class="scan-list__icon">
             <use href=""></use>
           </svg>
-          <p>Підготовка деталі до сканування</p>
+          <p lass="scan-list__descr">Підготовка деталі до сканування</p>
         </div>
       </li>
-      <li class="scan-list-item">
-        <div class="scan-list-canvas">
-          <svg class="scan-list-icon">
+      <li class="scan-list__item">
+        <div class="scan-list__canvas">
+          <svg class="scan-list__icon">
             <use href=""></use>
           </svg>
-          <p>Підготовка деталі до сканування</p>
+          <p lass="scan-list__descr">Підготовка деталі до сканування</p>
         </div>
       </li>
-      <li class="scan-list-item">
-        <div class="scan-list-canvas">
-          <svg class="scan-list-icon">
+      <li class="scan-list__item">
+        <div class="scan-list__canvas">
+          <svg class="scan-list__icon">
             <use href=""></use>
           </svg>
-          <p>Підготовка деталі до сканування</p>
+          <p lass="scan-list__descr">Підготовка деталі до сканування</p>
         </div>
       </li>
     </ul>
