--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,4 +1,5 @@
 @import './base/normalize';
+@import './base/fonts';
 @import './base/reset';
 @import './base/common';
 @import './utils/visually_hidden';
