--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,3 +6,6 @@
 @import './utils/visually_hidden';
 @import './utils/placeholders';
 @import './components/page-footer';
+@import './components/order/hero';
+@import './components/order/contacts';
+@import './components/order/order-form';
