--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,6 +1,6 @@
 body {
     color: getColor('primary-text');
-    background-color: getColor('background');
+    background-color: getColor('white');
     font-family: $font-general;
     font-weight: 400;
 }
