--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -1,12 +1,11 @@
 $colors: (
     'primary-text': #2B2B2B,
     'title-text': #487996,
-    'background': #E5E5E5,
+    'background': #F5F5FA,
     'header-text': #BDBDBD,
     'white': #ffffff,
     'backdrop': rgba(43, 43, 43, 0.8),
 );
-
 
 @function getColor($key) {
     @return map-get($colors, $key);
