Удаляет ошибку >>>>>>> main

--- a/src/sass/base/_fonts.scss
+++ b/src/sass/base/_fonts.scss
@@ -25,12 +25,12 @@
   font-style: normal;
 }
 @font-face {
-	font-family: 'CeraPro';
-	src: url('/src/fonts/CeraPro-300.eot');
-	src: local('☺'), url('/src/fonts/CeraPro-300.woff') format('woff'), url('/src/fonts/CeraPro-300.ttf') format('truetype');
-	font-weight: 300;
-	font-style: normal;
->>>>>>> main
+  font-family: 'CeraPro';
+  src: url('/src/fonts/CeraPro-300.eot');
+  src: local('☺'), url('/src/fonts/CeraPro-300.woff') format('woff'),
+    url('/src/fonts/CeraPro-300.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
 }
 
 $font-general: ('CeraPro');
