--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,3 +13,4 @@
 @import './components/scanning/page-scanning';
 @import './components/page-footer';
 @import './components/page-header/page-header';
+@import './components/test-modal-overlay';
