--- a/src/sass/components/_test-modal-overlay.scss
+++ b/src/sass/components/_test-modal-overlay.scss
@@ -13,7 +13,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #cc4f4f;
+    background-color: #ffffff;
 }
 .arrow-previous{
     position: absolute;
