--- a/src/partials/modeling-page/methods-of-creation.html
+++ b/src/partials/modeling-page/methods-of-creation.html
@@ -1,6 +1,7 @@
 <section class="section method">
   <div class="container">
-    <h3 class="method__title title">Чим ми займаємося</h3>
+    <h3 class="method__title title">МИ СТВОРЮЄМО ФОТОРЕАЛІСТИЧНІ
+ЗОБРАЖЕННЯ МОДЕЛЕЙ</h3>
     <ul class="method__list list">
       <li class="method__item">
         <a href="" class="method-icon">
