--- a/src/sass/components/3D-modeling/_create-model.scss
+++ b/src/sass/components/3D-modeling/_create-model.scss
@@ -74,8 +74,22 @@
      gap: 16px;
      padding-left: 0;
 
+     &::before {
+               content: '';
+               display: inline-block;
+               width: 7px;
+               height: 7px;
+               margin: 0 12px 4px -19px;
+               border-radius: 3px 0;
+               border: 1px solid #487996;}
+
      @media screen and (min-width: 768px) {
                margin-bottom: 16px;
+
+               // @include mq($width-tablet) {
+               //           width: 8px;
+               //           height: 8px;
+               //      }
           }
      
      @media screen and (min-width: 1440px) {
