change gallery overlay

--- a/src/partials/main_page/more_fotos-overlay.html
+++ b/src/partials/main_page/more_fotos-overlay.html
@@ -1,5 +1,5 @@
 <div class="backdrop">
-    <div class="gallery-modal"></div>
+    <div class="gallery-modal">
     <button type="button" class="arrow-previous">
         <svg class="arrow-previous__icon" width="26" height="26">
             <use href="/src/images/icons.svg#icon-topcoat_next-light-1"></use>
@@ -10,5 +10,6 @@
             <use href="/src/images/icons.svg#icon-topcoat_next-light"></use>
         </svg>
     </button>
+    </div>
     <div class=""></div>
 </div>
