--- a/src/sass/components/3D-modeling/_create-model.scss
+++ b/src/sass/components/3D-modeling/_create-model.scss
@@ -64,8 +64,8 @@
      
           }
 }
+
 .modeling-item {
-     font-family: 'Cera Pro';
      font-weight: 300;
      font-size: 16px;
      line-height: 1.25;
@@ -74,31 +74,66 @@
      gap: 16px;
      padding-left: 0;
 
+     @include mq($width-tablet) {
+          margin-bottom: 16px;
+     }
+
+     @include mq($width-desktop) {
+          gap: 58px;
+          margin-bottom: 78px;
+     }
+
      &::before {
-               content: '';
-               display: inline-block;
-               width: 7px;
-               height: 7px;
-               margin: 0 12px 4px -19px;
-               border-radius: 3px 0;
-               border: 1px solid #487996;}
+          content: '';
+          display: inline-block;
+          width: 7px;
+          height: 7px;
+          margin: 0 12px 4px -19px;
+          border-radius: 3px 0;
+          border: 1px solid getColor('title-text');
 
-     @media screen and (min-width: 768px) {
-               margin-bottom: 16px;
-
-               // @include mq($width-tablet) {
-               //           width: 8px;
-               //           height: 8px;
-               //      }
+          @include mq($width-tablet) {
+               width: 8px;
+               height: 8px;
           }
-     
-     @media screen and (min-width: 1440px) {
-               gap: 58px;
-               margin-bottom: 78px;
-     
-          }
-
+     }
 }
+
+// .modeling-item {
+//      font-family: 'Cera Pro';
+//      font-weight: 300;
+//      font-size: 16px;
+//      line-height: 1.25;
+//      text-align: left;
+//      color: #2B2B2B;
+//      gap: 16px;
+//      padding-left: 0;
+
+//      &::before {
+//                content: '';
+//                display: inline-block;
+//                width: 7px;
+//                height: 7px;
+//                margin: 0 12px 4px -19px;
+//                border-radius: 3px 0;
+//                border: 1px solid #487996;}
+
+//      @media screen and (min-width: 768px) {
+//                margin-bottom: 16px;
+
+//                // @include mq($width-tablet) {
+//                //           width: 8px;
+//                //           height: 8px;
+//                //      }
+//           }
+     
+//      @media screen and (min-width: 1440px) {
+//                gap: 58px;
+//                margin-bottom: 78px;
+     
+//           }
+
+// }
 .modeling-img__item {
      width: 280px;
 
