--- a/src/partials/main_page/gallery.html
+++ b/src/partials/main_page/gallery.html
@@ -1,4 +1,4 @@
-<section class="main-gallery">
+<section class="main-gallery" id="gallery">
   <div class="container">
     <h2 class="main-gallery__title">Галерея</h2>
     <ul class="main-gallery__list">
