--- a/src/partials/main_page/hero.html
+++ b/src/partials/main_page/hero.html
@@ -167,6 +167,11 @@
         </picture>
       </li>
     </ul>
+    <a class="main-hero__arrow" href="#gallery">
+      <svg width="32" heidth="32">
+        <use href="./images/icons.svg#icon-bi_arrow-up"></use>
+      </svg>
+    </a>
     <p class="main-hero__text">Ми втілюємо ідеї в реальність</p>
   </div>
 </section>
