--- a/src/partials/printing_page/model-examples.html
+++ b/src/partials/printing_page/model-examples.html
@@ -1,6 +1,6 @@
 <section class="model-section">
   <div class="container">
-    <h2 class="model__title">ми створюємо</h2>
+    <h2 class="model__title title">ми створюємо</h2>
     <ul class="model__list list">
       <li class="model__item item">
         <div class="card-thumb">
@@ -139,7 +139,7 @@
             />
           </picture>
           <div class="model__content">
-            <p class="content__title">корпоративний дизайн</p>
+            <p class="content__title">корпоративний<br />дизайн</p>
           </div>
         </div>
       </li>
