--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -20,3 +20,4 @@
 @import './components/order/order-form';
 @import './components/order/order-contacts';
 @import './components/printing/model-examples';
+@import './components/printing/process-description';
