--- a/src/sass/components/printing/_model-examples.scss
+++ b/src/sass/components/printing/_model-examples.scss
@@ -1,21 +1,16 @@
 .model-section {
   padding-top: 0;
   padding-bottom: 40px;
+  @include mq($width-desktop) {
+    padding-bottom: 100px;
+  }
 }
 
 .model__title {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 1.25;
-  color: getColor('title-text');
   text-transform: uppercase;
   margin-bottom: 16px;
-  @include mq($width-tablet) {
-    font-size: 36px;
-  }
+
   @include mq($width-desktop) {
-    font-size: 48px;
     margin-bottom: 24px;
   }
 }
