--- a/src/partials/main_page/more_fotos-overlay.html
+++ b/src/partials/main_page/more_fotos-overlay.html
@@ -1,15 +1,14 @@
 <div class="backdrop">
     <div class="gallery-modal">
     <button type="button" class="arrow-previous">
-        <svg class="arrow-previous__icon" width="26" height="26">
+        <svg class="arrow-previous__icon">
             <use href="/src/images/icons.svg#icon-topcoat_next-light-1"></use>
         </svg>
     </button>
     <button type="button" class="arrow-next">
-        <svg class="arrow-next__icon" width="26" height="26">
+        <svg class="arrow-next__icon" >
             <use href="/src/images/icons.svg#icon-topcoat_next-light"></use>
         </svg>
     </button>
     </div>
-    <div class=""></div>
 </div>
