--- a/src/partials/main_page/background-decor-mob.html
+++ b/src/partials/main_page/background-decor-mob.html
@@ -1,4 +1,4 @@
-<section class="decor">
+<!-- <section class="decor">
   <div class="decor__wrapper container">
     <div class="decor__block1 block"></div>
     <div class="decor__block2 block"></div>
@@ -9,4 +9,5 @@
     <div class="decor__block7 block"></div>
     <div class="decor__block8 block"></div>
   </div>
-</section>
+</section> -->
+<div class="background-overlay"></div>
