--- a/src/sass/components/_background-decor-mob.scss
+++ b/src/sass/components/_background-decor-mob.scss
@@ -1,54 +1,154 @@
-.block {
+// .block {
+//   position: absolute;
+//   width: 73.65px;
+//   height: 73.65px;
+//   z-index: -1;
+//   background: #ffffff;
+//   box-shadow: 20px 20px 80px rgba(0, 0, 0, 0.1);
+//   @include mq($width-tablet) {
+//     display: none;
+//   }
+// }
+// .decor__block1 {
+//   top: 0px;
+//   left: 0px;
+//   border-radius: 35px 0px 0px 35px;
+//   transform: rotate(180deg);
+//   box-shadow: 20px 20px 80px rgba(0, 0, 0, 0.1);
+// }
+// .decor__block2 {
+//   // left: 246px;
+//   right: 0px;
+//   top: 0px;
+//   border-radius: 35px 0px 0px 35px;
+// }
+// .decor__block3 {
+//   left: -29px;
+//   top: 294.61px;
+//   border-radius: 0px 0px 35px 0px;
+// }
+// .decor__block4 {
+//   // left: 261px;
+//   right: -14.65px;
+//   top: 580.53px;
+//   border-radius: 72px;
+// }
+// .decor__block5 {
+//   left: -17px;
+//   top: 642.93px;
+//   border-radius: 25px 0px;
+// }
+// .decor__block6 {
+//   // left: 340.65px;
+//   right: -20.65px;
+//   top: 1025px;
+//   border-radius: 25px 0px;
+//   transform: rotate(90deg);
+// }
+// .decor__block7 {
+//   left: 95px;
+//   top: 1211px;
+// }
+// .decor__block8 {
+//   // left: 261px;
+//   right: -14.65px;
+//   top: 1351.84px;
+//   border-radius: 25px 0px;
+// }
+// .decor-wrapper {
+//   width: 100%;
+//   height: 100%;
+// }
+// .block-tab {
+//   position: absolute;
+//   width: 73.65px;
+//   height: 74.05px;
+//   background: #ffffff;
+//   // @include mq($width-min-allowable) {
+//   //   display: none;
+//   // }
+//   // // @include mq($width-mobile) {
+//   // //   display: none;
+//   // // }
+//   // @include mq($width-desktop) {
+//   //   display: none;
+//   // }
+// }
+// .decor__block9 {
+//   left: 306.65px;
+//   top: 74.05px;
+//   box-shadow: 20px 20px 80px rgba(0, 0, 0, 0.1);
+//   border-radius: 35px 0px 0px 35px;
+//   transform: rotate(180deg);
+// }
+// .decor__block10 {
+//   left: 32.1px;
+//   top: 0px;
+//   border-radius: 35px 0px 0px 0px;
+//   position: absolute;
+// }
+// .decor__block11 {
+//   left: 32.1px;
+//   top: 74.05px;
+//   box-shadow: 20px 20px 80px rgba(0, 0, 0, 0.1);
+//   border-radius: 0px 0px 35px 0px;
+// }
+// .decor__block12 {
+//   left: 105.76px;
+//   top: 71.48px;
+//   border-radius: 72px;
+//   background-image: url
+//     '../src/images/main/tablet/backgraund-imgs/gallery-bgi-1.jpg';
+// }
+// .decor__block13 {
+// }
+// .decor__block14 {
+// }
+// .decor__block15 {
+// }
+// .decor__block16 {
+// }
+// .decor__block17 {
+// }
+// .decor__block18 {
+// }
+// .decor__block19 {
+// }
+// .decor__block20 {
+// }
+// .decor__block21 {
+// }
+// .decor__block22 {
+// }
+// .decor__block23 {
+// }
+// .decor__block24 {
+// }
+// .decor__block25 {
+// }
+// .decor__block26 {
+// }
+// .decor__block27 {
+// }
+// .decor__block28 {
+// }
+// .decor__block29 {
+// }
+// .decor__block30 {
+// }
+// .decor__block31 {
+// }
+// .decor__block32 {
+// }
+.background-overlay {
+  background-image: url './images/main/mobile/background/decor-mob.png';
+
+  @include retina {
+    background-image: url './images/main/mobile/background/decor-mob-2x.png';
+  }
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   position: absolute;
-  width: 73.65px;
-  height: 73.65px;
-  z-index: -1;
-  background: #ffffff;
-}
-.decor__block1 {
-  box-shadow: 20px 20px 80px rgba(0, 0, 0, 0.1);
-  border-radius: 35px 0px 0px 35px;
-  transform: rotate(180deg);
-}
-.decor__block2 {
-  left: 246px;
-  top: 0px;
-  box-shadow: 20px 20px 80px rgba(0, 0, 0, 0.1);
-  border-radius: 35px 0px 0px 35px;
-}
-.decor__block3 {
-  left: -29px;
-  top: 294.61px;
-  box-shadow: 20px 20px 80px rgba(0, 0, 0, 0.1);
-  border-radius: 0px 0px 35px 0px;
-}
-.decor__block4 {
-  left: 261px;
-  top: 580.53px;
-  box-shadow: 20px 20px 80px rgba(0, 0, 0, 0.1);
-  border-radius: 72px;
-}
-.decor__block5 {
-  left: -17px;
-  top: 642.93px;
-  box-shadow: 20px 20px 80px rgba(0, 0, 0, 0.1);
-  border-radius: 25px 0px;
-}
-.decor__block6 {
-  left: 340.65px;
-  top: 1025px;
-  box-shadow: 20px 20px 80px rgba(0, 0, 0, 0.1);
-  border-radius: 25px 0px;
-  transform: rotate(90deg);
-}
-.decor__block7 {
-  left: 95px;
-  top: 1211px;
-  box-shadow: 20px 20px 80px rgba(0, 0, 0, 0.1);
-}
-.decor__block8 {
-  left: 261px;
-  top: 1351.84px;
-  box-shadow: 20px 20px 80px rgba(0, 0, 0, 0.1);
-  border-radius: 25px 0px;
+  z-index: 9999;
 }
