--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,3 +14,8 @@
 @import './components/page-footer';
 @import './components/page-header/page-header';
 @import './components/background-decor-mob';
+@import './components/background-decor-mob-nav.scss';
+@import './components/background-decor-tab';
+@import './components/background-decor-tab-nav';
+@import './components/background-decor';
+@import './components/background-decor-main';
