--- a/src/partials/main_page/more_photo_overlay.html
+++ b/src/partials/main_page/more_photo_overlay.html
@@ -1,11 +1,11 @@
-<div class="backdrop">
-  <div class="gallery-modal">
-    <button type="button" class="arrow-previous">
+<div class="gallary__backdrop">
+  <div class="gallary__image">
+    <button type="button" class="gallary__btn-prev">
       <svg class="arrow-previous__icon">
         <use href="/src/images/icons.svg#icon-topcoat_next-light-1"></use>
       </svg>
     </button>
-    <button type="button" class="arrow-next">
+    <button type="button" class="gallary__btn-next">
       <svg class="arrow-next__icon">
         <use href="/src/images/icons.svg#icon-topcoat_next-light"></use>
       </svg>
