--- a/src/partials/main_page/more_photos.html
+++ b/src/partials/main_page/more_photos.html
@@ -56,7 +56,6 @@
           />
 
           <img
-            class="gallery-modal"
             src="./images/main/mobile/gallery/more-photos-mozjpeg/more-photos-1.jpg"
             alt="Фото фігурок іграшок вироблених 3-Д принтером"
             class="gallary__image"
@@ -112,7 +111,6 @@
           />
 
           <img
-            class="gallery-modal"
             src="./images/main/mobile/gallery/more-photos-mozjpeg/more-photos-2.jpg"
             alt="Модель конструкції сцени"
             class="gallary__image"
@@ -170,7 +168,6 @@
           />
 
           <img
-            class="gallery-modal"
             src="./images/main/mobile/gallery/more-photos-mozjpeg/more-photos-3.jpg"
             alt="Модель робота"
             class="gallary__image"
@@ -226,7 +223,6 @@
           />
 
           <img
-            class="gallery-modal"
             src="./images/main/mobile/gallery/more-photos-mozjpeg/more-photos-4.jpg"
             alt="Череп"
             class="gallary__image"
@@ -282,7 +278,6 @@
           />
 
           <img
-            class="gallery-modal"
             src="./images/main/mobile/gallery/more-photos-mozjpeg/more-photos-5.jpg"
             alt="Модель танк"
             class="gallary__image"
@@ -338,7 +333,7 @@
           />
 
           <img
-            class="gallery-modal"
+            class="gallary__image"
             src="./images/main/mobile/gallery/more-photos-mozjpeg/more-photos-6.jpg"
             alt="Дві настольні лампи"
           />
@@ -393,7 +388,7 @@
           />
 
           <img
-            class="gallery-modal"
+            class="gallary__image"
             src="./images/main/mobile/gallery/more-photos-mozjpeg/more-photos-7.jpg"
             alt="Модель спортивного авто"
           />
@@ -448,7 +443,7 @@
           />
 
           <img
-            class="gallery-modal"
+            class="gallary__image"
             src="./images/main/mobile/gallery/more-photos-mozjpeg/more-photos-8.jpg"
             alt="Модель куполу будинку"
           />
@@ -503,7 +498,7 @@
           />
 
           <img
-            class="gallery-modal"
+            class="gallary__image"
             src="./images/main/mobile/gallery/more-photos-mozjpeg/more-photos-9.jpg"
             alt="Настольна лампа у вигляді гриба"
           />
@@ -558,7 +553,7 @@
           />
 
           <img
-            class="gallery-modal"
+            class="gallary__image"
             src="./images/main/mobile/gallery/more-photos-mozjpeg/more-photos-10.jpg"
             alt="Три запальнички"
           />
@@ -613,7 +608,7 @@
           />
 
           <img
-            class="gallery-modal"
+            class="gallary__image"
             src="./images/main/mobile/gallery/more-photos-mozjpeg/more-photos-11.jpg"
             alt="Моделька авто пікап"
           />
@@ -668,7 +663,7 @@
           />
 
           <img
-            class="gallery-modal"
+            class="gallary__image"
             src="./images/main/mobile/gallery/more-photos-mozjpeg/more-photos-12.jpg"
             alt="Композиція горшки-клітки для квітів"
           />
