--- a/src/sass/components/_more_photo_overlay.scss
+++ b/src/sass/components/_more_photo_overlay.scss
@@ -1,37 +1,53 @@
 .gallary__backdrop {
+    display: none;
+
+    &.is-surfaced {
+        display: block;
+    }
+
+    position: fixed;
+    z-index: 3;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    background: rgba(43, 43, 43, 0.8);
+}
+
+
+.gallary__image.is-surfaced {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    object-fit: contain;
+    z-index: 200;
+
     @include mq($width-tablet) {
-        z-index: 100;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(43, 43, 43, 0.8);
+        min-width: 554px;
+        min-height: 369px;
+    }
+
+    @include mq($width-desktop) {
+        min-width: 906px;
+        min-height: 605px;
     }
 }
 
 
-.gallary__image.is-surfaced{
-  @include mq($width-tablet) {
-    min-width: 554px;
-    min-height: 369px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #FFFFFF;
-  }
-  @include mq($width-desktop) {
-    min-width: 906px;
-    min-height: 605px;
-  }
+.is-surfaced .gallary__btn-next,
+.is-surfaced .gallary__btn-prev {
+    display: block;
 }
+
+
 
 .gallary__image {
     @include mq($width-tablet) {
         min-width: 554px;
         min-height: 369px;
-        position: absolute;
+        position: fixed;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
@@ -66,10 +82,12 @@
     position: absolute;
     background-color: transparent;
     border: none;
+    right: 50%;
+    right: -21px;
 
     @include mq($width-tablet) {
         top: 50%;
-        right: -47px;
+            right: -47px;
     }
 
     @include mq($width-desktop) {
