more photos fixed
гнучкіть more photos налаштовна до 480 рх. після 480рх і до 768рх - фіскованій оптимальний розмір зображення

--- a/src/sass/components/_main_more_photos.scss
+++ b/src/sass/components/_main_more_photos.scss
@@ -71,10 +71,15 @@
 // RESPONSIVE FOR MOR PHOTOS
 @media screen and (max-width: 479px) {
   .gallary__image {
-    width: calc(100% - 10px);
+    width: calc(100%);
   }
   .more-photos__item {
     place-content: normal;
+  }
+}
+@include mq($width-mobile) {
+  .gallary__image {
+    width: 440px;
   }
 }
 
