--- a/src/sass/components/order/_order-form.scss
+++ b/src/sass/components/order/_order-form.scss
@@ -43,10 +43,10 @@
 
 .form__field {
   position: relative;
+  width: 100%;
 }
 
-.form__label--main,
-.form__label--selective {
+.form__label--main {
   position: absolute;
   top: 0;
   left: 0;
@@ -64,19 +64,47 @@
   font-size: 14px;
 }
 
+.form__arrow::before {
+  content: '';
+  display: block;
+
+  position: absolute;
+  top: 3px;
+  right: 0;
+  border: 10px solid #0000;
+  border-top: 10px solid map-get($colors, 'primary-text');
+  border-bottom-width: 0;
+
+  pointer-events: none;
+  transition: transform;
+}
+
+.form__option {
+  appearance: none;
+
+  &:focus + .form__arrow::before {
+    transform: rotate(180deg);
+  }
+  @include mq($width-desktop) {
+    font-size: 18px;
+  }
+}
+
 .form__list::-webkit-calendar-picker-indicator {
   opacity: 1;
 }
 
-.form__input {
+.form__input,
+.form__option {
   display: block;
   margin-bottom: 44px;
   width: 100%;
+  cursor: pointer;
   line-height: 1.25;
-  outline: transparent;
 
   color: map-get($colors, 'primary-text');
 
+  outline: transparent;
   border: transparent;
   border-bottom: 1px solid map-get($colors, 'title-text');
 
