--- a/src/partials/order/order-form.html
+++ b/src/partials/order/order-form.html
@@ -40,9 +40,9 @@
           <div class="form__arrow"></div>
           <label for="plastics" class="form__label--selective"></label>
           <datalist id="types-plastics">
-            <option>300 мікрон</option>
-            <option>200 мікрон</option>
-            <option>100 мікрон</option>
+            <option>поліетилен</option>
+            <option>поліпропілен</option>
+            <option>полістирол</option>
             <option>Труднощі у виборі - ми допоможемо</option>
           </datalist>
         </div>
