--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -21,8 +21,8 @@
 @import './components/page-header/page-header';
 @import './components/order/order-hero';
 @import './components/order/order-form';
+@import './components/order/select';
 @import './components/contacts';
 @import './components/printing-page/model-examples';
 @import './components/more_photo_overlay';
 @import './components/decor';
-
