--- a/src/partials/order/order-form.html
+++ b/src/partials/order/order-form.html
@@ -53,7 +53,7 @@
           />
           <span class="select-icon">
             <svg width="18.1" height="13">
-              <use href="/src/images/icons.svg#icon-form-arrow"></use>
+              <use href="./images/icons.svg#triangle-down"></use>
             </svg>
           </span>
         </div>
